{{$NEXT}}

1.111970  2011-07-16 14:27:32 Europe/London

  * Port to Dist::Zilla

libews-calendar-viewer-perl (0.03) UNRELEASED; urgency=low

  * Fix dependencies
  * Fix tests

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Thu, 25 Feb 2010 15:18:02 +0000

libews-calendar-viewer-perl (0.01) UNRELEASED; urgency=low

  * Initial release on an unsuspecting world.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Mon, 22 Feb 2010 23:51:24 +0000