@@ -1,1 +1,2 @@
 EWS-Calendar-Viewer-*
+examples/ews_calendar_viewer_local.conf
