@@ -3,8 +3,10 @@ name = EWS-Calendar-Viewer
 [Prereqs]
 Catalyst::Plugin::Static::Simple = 0
 Catalyst::Plugin::ConfigLoader = 0
+Catalyst::Action::RenderView = 0
 LWP::Authen::Ntlm = 0
 Authen::NTLM = 0
+LWP::Protocol::https = 0
 Config::General = 0
 EWS::Client = 1.111940
 
